force-app/main/default/objects/vlocity_ps__BusinessSite__c/fields/vlocity_ps__FaxNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__FaxNumber__c</fullName>
    <label>Fax Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>