force-app/main/default/objects/vlocity_ps__BusinessSite__c/fields/vlocity_ps__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Geolocation__c</fullName>
    <label>Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>