force-app/main/default/objects/vlocity_ps__BusinessSite__c/fields/vlocity_ps__LanguagesKnown__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__LanguagesKnown__c</fullName>
    <label>Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>