force-app/main/default/objects/vlocity_ps__BusinessSite__c/fields/vlocity_ps__OperatingHoursId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OperatingHoursId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Hours</label>
    <referenceTo>vlocity_ps__OperatingHours__c</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>