force-app/main/default/objects/vlocity_ps__BusinessSite__c/fields/vlocity_ps__PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PhoneNumber__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>