force-app/main/default/objects/vlocity_ps__BusinessSite__c/fields/vlocity_ps__PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>