force-app/main/default/objects/vlocity_ps__BusinessSite__c/fields/vlocity_ps__StreetAddress__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__StreetAddress__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>