force-app/main/default/objects/vlocity_ps__BusinessSite__c/fields/vlocity_ps__Website__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Website__c</fullName>
    <label>Website</label>
    <length>100</length>
    <type>Text</type>
</CustomField>